data/derived/comb/progs/unify/prog8032.ml.out
Characters 168-170:
  |Average(e1,e2)->buildAverage(eval e1, eval e2)
                                     ^^
Error: This expression has type expr but an expression was expected of type
         expr * expr * expr
